--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,19 @@
     box-sizing: border-box;
   }
 }
+
+#dv1 {
+  background-color: #f34;
+}
+
+#dv2 {
+  background-color: #0f0;
+}
+
+#dv3 {
+  background-color: #00f;
+}
+.navbar-brand img{
+  height: 70px;
+ 
+}
