--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,12 @@
 .nav-item {
   padding: 20px;
 }
-
+.nav-link{
+  cursor: pointer;
+}
+.nav-link:hover{
+  font-weight: 800;
+}
 h1 {
   text-align: center;
 }
